<resources>
    <string name="app_name">Bazara</string>
    <string name="title_produtos">Bazara</string>
    <string name="title_pedidos">Meus Pedidos</string>
    <string name="title_cesto">Cesto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Procurar Produto</string>
    <string name="search_hint">Procurar Produto</string>
    <string name="title_activity_main">Bazara</string>
    <string name="semdados">Sem dados pra mostrar :(</string>
    <string name="more">Mais</string>
    <string name="title_activity_lista_produto">Lista de Produtos</string>
    <string name="title_activity_detalhes">Detalhes do Produto</string>
    <string name="input">Quantidade</string>
    <string name="input_content">Digite a quantidade que deseja pedir</string>
    <string name="input_hint">Exemplo: 500</string>
    <string name="input_prefill">44</string>
    <string name="title_activity_cart">Meu Cesto</string>
    <string name="action_notifications">Notificações</string>
    <string name="action_cart">Cesto</string>
    <string name="title_activity_cesto">Meu Cesto</string>
    <string name="title_activity_login">Autenticação</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit</string>
    <string name="review">Review</string>

    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>

    <string name="submit_confirm_message">Are you happy with your choices?</string>
    <string name="submit_confirm_button">OK</string>
    <string name="title_activity_registo">"Registo "</string>
    <string name="title_activity_confirmar">Confirmar Número</string>
    <string name="title_activity_numero">Verifição de Número</string>
    <string name="title_activity_pedidos">Meus Pedidos</string>
    <string name="erro_password_vazio">Informe a palavra-passe</string>
    <string name="erro_phone">Numero de telefone invalido</string>
    <string name="erro_nome">Introduza o seu nome</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>



    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">Bernardo Alves Maluleque</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.bazara.org/</string>
    <string name="privacy_policy">Política de Privacidade</string>
    <string name="url_privacy">http://www.bazara.org/</string>
    <string name="title_terms">Termos &amp; Condições</string>
    <string name="url_terms">http://www.bazara.org/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings_headers">Settings with Headers</string>
    <string name="title_activity_settings">Definições</string>
    <string name="progress_autenticar">Autenticação</string>
    <string name="please_wait_autenticar">A Autenticar, aguarde por favor...</string>
    <string name="progress_terminar">Terminar Sessão</string>
    <string name="please_wait_terminar">A terminar a sessão</string>
    <string name="progress_registar">Registar Utilizador</string>
    <string name="please_wait_registar">A registar, aguarde por favor...</string>
    <string name="please_wait_pedir">A enviar o pedido, aguarde..</string>
    <string name="progress_pedir">Enviar Pedido</string>
    <string name="detalhes_produto">\u2022 Produto Orgânico, Fresco</string>
    <string name="associacao_agricultor">\u2022 Agricultor/Associação:</string>
    <string name="progress_verificar">A verificar código</string>
    <string name="please_wait_verificar">Aguarde por favor</string>

</resources>
